# codebase-teacher

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CODEBASE-WALKTHROUGH.md  README.md  TODO.md  index.html  pyproject.toml
.claude/agents/: teach.md
.claude/commands/: eval-loop.md  teach-and-push.md  teach-evaluate-push.md
eval/: __init__.py  __main__.py  cli.py  packet.py  repos.yaml  runner.py
eval/prompts/: judge_rubric.md
src/codebase_teacher/: __init__.py  __main__.py
src/codebase_teacher/analyzer/: api_detector.py  c_parser.py  code_parser.py  flow_tracer.py  infra_detector.py  java_parser.py  scala_parser.py  terraform_parser.py
src/codebase_teacher/cli/: analyze.py  app.py  generate.py  scan.py
src/codebase_teacher/core/: config.py  context.py  exceptions.py  results.py
src/codebase_teacher/generator/: diagrams.py  docs.py  html.py
src/codebase_teacher/llm/: claude_code_adapter.py  cli_provider.py  factory.py  (+5 more)
tests/: conftest.py
tests/test_analyzer/: test_api_detector.py  test_c_parser.py  test_code_parser.py  test_infra_detector.py  test_java_parser.py  test_scala_parser.py  test_terraform_parser.py
tests/test_cli/: test_analyze_cache.py
tests/test_eval/: test_packet.py  test_runner.py
tests/test_generator/: test_docs.py  test_html.py
tests/test_llm/: test_cli_provider.py  test_context_manager.py  test_factory.py  test_prompt_registry.py  test_retry.py  test_structured.py
tests/test_scanner/: test_dependency.py  test_discovery.py  test_file_classifier.py  test_learner_info.py
tests/test_storage/: test_database.py
(+14 files in other folders)
