[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codebase-teacher"
version = "0.1.0"
description = "AI-powered codebase teaching tool that generates documentation, lectures, quizzes, and evaluations"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "litellm>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "jinja2>=3.1",
    "tree-sitter>=0.22,<0.24",
    "tree-sitter-java>=0.23",
    "tree-sitter-hcl>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]

[project.scripts]
teach = "codebase_teacher.cli.app:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/codebase_teacher"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "llm: tests that require a real LLM API key",
]
